# CPP-Utext

./: .gitignore  CMakeLists.txt  README.md  build.sh  utext
app/: CMakeLists.txt  main.cpp
app/Forms/: mainwindow.ui
app/resources/: qmain.qss  resources.qrc
app/src/: CMakeLists.txt  dataStructure.h  finder.cpp  finder.h  mainwindow.cpp  mainwindow.h  myTab.cpp  myTab.h  myTree.cpp  myTree.h  myWidget.cpp  myWidget.h  pieceTable.cpp  pieceTable.h  test_main.cpp  textArea.cpp  textArea.h
